--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,37 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <!-- Primary -->
+    <color name="primaryBlue">#2490FF</color>
+    <color name="nutriGreen">#1BCD7B</color>
+    <color name="white">#FFFFFF</color>
+    <color name="bbBlack">#161819</color>
+    <color name="bbLanguageViolatorBlack">#80222425</color>
+    <color name="lighterGray">#E8EAEE</color>
+    <color name="pearlGray">#F7F8FA</color>
+    <color name="disabledGray">#A09EA3</color>
+    <color name="medGray">#706F73</color>
+    <color name="lighterPearlGray">#E6F7F8FA</color>
+    <color name="lighterSolidPearlGray">#F7F8FA</color>
+    <color name="buttersGray">#bdbdbd</color>
+    <color name="blueHover">#1252b3</color>
+    <color name="blueRippleEnd">#0e69c6</color>
+    <color name="blueRippleStart">#0f3699</color>
+
+    <!-- Secondary -->
+    <color name="halfBlueCTA">#91C7FF</color>
+    <color name="skyBlue">#D1E8FF</color>
+    <color name="halfNutriGreen">#8DE6BD</color>
+    <color name="pollenYellow">#fff380</color>
+    <color name="creamBlue">#E8F4FF</color>
+
+    <!-- Transparent colors -->
+    <color name="progressOverlayBackground">#BF000000</color>
+    <color name="progressOverlayBackgroundLight">#33000000</color>
+    <color name="transparent_ten_percent">#1A000000</color>
+    <color name="transparent_white">#66FFFFFF</color>
+    <color name="transparent_white_full">#00FFFFFF</color>
+    <color name="transparent">#00000000</color>
+    <color name="bbBlack_50_percent_opacity">#80161819</color>
 </resources>
