--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pearlGray"
+    android:background="@color/white"
     android:id="@+id/swipeRefreshLayout"
     tools:context=".MainActivity">
 
@@ -13,16 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageButton
+            android:id="@+id/ib_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/global_space_medium"
+            android:layout_marginEnd="@dimen/global_space_medium"
+            android:layout_weight="4"
+            android:background="@color/transparent"
+            android:src="@drawable/ic_close"
+            android:visibility="visible"
+            tools:visibility="visible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/schoolsList"
+            android:id="@+id/scoresList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/global_space_large"
+            android:layout_marginTop="@dimen/toolbar_margin_top_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_school" />
+            app:layout_constraintTop_toBottomOf="@id/ib_close"
+            tools:listitem="@layout/item_score" />
 
         <TextView
             android:id="@+id/list_error"
